--- a/src/components/NavbarLogin.module.css
+++ b/src/components/NavbarLogin.module.css
@@ -1,13 +1,12 @@
-.card {
-  width: 200px;
+.top {
+  width: 100%;
   height: auto;
   padding: 18px 14px;
   box-sizing: border-box;
-  border-radius: 10px;
   background-color: white;
   color: blue;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 0 10px 5px rgb(0 0 0 / 0.1);
+  box-shadow: 0 0 10px 10px rgb(0 0 0 / 0.1);
 }
