--- a/src/components/NavbarLogin.module.css
+++ b/src/components/NavbarLogin.module.css
@@ -10,3 +10,19 @@
   align-items: center;
   box-shadow: 0 0 10px 10px rgb(0 0 0 / 0.1);
 }
+
+.menu {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.inactive {
+  text-decoration: none;
+}
+
+.active {
+  color: blue;
+  font-weight: bold;
+  text-decoration: none;
+}
